--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,11 +5,11 @@
         background-color: transparent;
     }
     5% {
-        background-color: red;
+        background-color: orange;
         color: black;
     }
     100% {
-        background-color: red;
+        background-color: orange;
         color: black;
     }
 }
@@ -152,4 +152,82 @@ figcaption {
     outline: none;
     text-align: center;
     border-radius: 3px;
+}
+
+.leaderboard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: solid;
+    padding: 20px 120px;
+    /* border-radius: 15px; */
+    background-color: darkslategrey;
+    top: 210px;
+    bottom: 50px;
+    position: fixed;
+    overflow-y: auto;
+    overflow-x: hidden;
+    box-shadow: 0px 0px 15px 0px white;
+}
+
+.leaderboard > h1 {
+    margin: 0 0 10px;
+}
+
+th {
+    background-color: seagreen;
+    padding: 10px 20px;
+    font-variant-caps: petite-caps;
+}
+
+td {
+    background-color: seagreen;
+    /* background-color: darkgreen; */
+    padding: 2px 20px;
+    text-align: center;
+    mix-blend-mode: hard-light;
+}
+
+table {
+    border: solid orange;
+    background-color: black;
+    cursor: alias;
+    user-select: none;
+    cursor: none;
+}
+
+tbody > tr:hover {
+    /* border: solid blue; */
+    background-color: rgb(0, 0, 175);
+    transform: scale(1.1);
+    box-shadow: 0px 0px 15px 0px white;
+    /* pointer-events: none; */
+    font-variant-caps: petite-caps;
+}
+
+thead {
+    cursor: alias;
+}
+
+button {
+    margin: 10px;
+    padding: 5px 20px;
+    font-size: large;
+    background-color: wheat;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+}
+
+button:hover {
+    background-color: orange;
+    cursor: pointer;
+}
+
+area {
+    cursor: crosshair;
+}
+
+.background {
+    cursor: crosshair;
 }
