--- a/src/styles/Dropdown.css
+++ b/src/styles/Dropdown.css
@@ -1,5 +1,6 @@
 .dropdown {
-    background-color: darkblue;
+    /* background-color: darkblue; */
+    background-color: darkslategray;
     position: absolute;
     border-radius: 10px;
 }
@@ -7,6 +8,9 @@
 ul {
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 li {
